# DeepSynergy

./: .gitignore  MIT.txt  README.md  pyproject.toml  requirements.txt
deepsynergy/: __init__.py  decoders.py  encoders.py  layers.py  model.py  optim.py  utils_data.py  utils_training.py
examples/: example_decoders.ipynb  example_gaussian_system.ipynb  example_logic_gates.ipynb
